Change sanctum to jwt

--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3",
         "laravel/framework": "^7.24",
-        "laravel/sanctum": "^2.4",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^2.0",
         "spatie/laravel-permission": "^3.13",
         "spatie/laravel-query-builder": "^2.8",
+        "tymon/jwt-auth": "^1.0",
         "watson/nameable": "^1.0"
     },
     "require-dev": {
